EMF Support, gui item batching, item filtering, fix tlm geckolib model lighting error, fix iris glyph format midcoord